[gd_scene load_steps=12 format=2]

[ext_resource path="res://mockup/player.gd" type="Script" id=1]
[ext_resource path="res://assets/mockup/mockstranaut.png" type="Texture" id=2]
[ext_resource path="res://assets/mockup/sfx/jump_ground.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/mockup/sfx/land_ground.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/mockup/sfx/step_ground.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "on_step"
}, {
"args": [  ],
"method": "on_step"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 15 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 5 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )
tag = "player"

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
vframes = 3
hframes = 3
frame = 5

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/run = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -15 )
shape = SubResource( 3 )

[node name="audJump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 4 )

[node name="audLand" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 5 )

[node name="audStep" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 6 )
